# a2ui-adk-weather-mcp-copilotkit

./: MCP_SHARING_GUIDE.md  README.md  SEPARATE_WORKSPACE_SETUP.md  START.md  package-lock.json  package.json
agent/: __main__.py  confirmation_agent.py  prompt_builder.py  pyproject.toml  two_agent_executor.py  weather_agent.py  weather_agent_executor.py  weather_tools.py
agent/weather/: __init__.py
app/: page.tsx
app/api/copilotkit/[[...slug]]/: route.tsx
scripts/: start-dev.sh  wait-for-backend.sh
